--- a/src/config.py.in
+++ b/src/config.py.in
@@ -5,7 +5,7 @@ datadir="@datadir@"
 localedir=datadir+"/locale"
 pkgdatadir="@pkgdatadir@"
 libdir="@libdir@"
-libexecdir="@libexecdir@"
+pkglibdir="@pkglibdir@"
 PACKAGE="@PACKAGE@"
 VERSION="@VERSION@"
 GETTEXT_PACKAGE="@GETTEXT_PACKAGE@"
